<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 网络请求提示 -->
    <string name="net_not_connected">网络连接失败，请检查您的网络连接</string>
    <string name="net_server_connected_error">连接服务器失败，请稍后重试</string>
    <string name="net_server_error">服务器处理请求失败，请稍后重试</string>
    <string name="net_server_param_error">应用数据出错，请刷新重试</string>
    <string name="net_unknown_error">未知错误，请稍后重试</string>

    <string name="bind_tip">1.绑定手机号码可提高账号安全性，请尽快绑定手机号码。\n2.手机号码可以用于游戏登录，绑定成功后，如不慎忘记密码，也可通过手机号找回哦</string>
    <string name="real_name_tip">根据《防未成年人沉迷网络游戏的通知》，游戏用户应使用有效身份证实名认证，我们承诺将依法保护您的个人信息安全</string>
    <string name="service_tip">为了更快的解决您反馈的问题，建议您选择其中一种联系方式联系客服，如遇非正常工作时间，您也可以通过在线客服或者公众号留言反馈质询，客服看到后第一时间给您回复。</string>
    <string name="kl_share_tip">点击下方复制按钮，即可复制本游戏的体验链接或游戏包下载地址哦~</string>


    <string name="umcsdk_account_login">使用历史帐号快速登录</string>
    <string name="umcsdk_account_name">中国移动互联网通行证</string>
    <string name="umcsdk_auto_login">本机号码登录</string>
    <string name="umcsdk_auto_login_ing">本机号码登录中</string>
    <string name="umcsdk_capability">您的手机号码、号码状态等信息</string>
    <string name="umcsdk_capaids_text">该应用请求获取以下权限</string>
    <string name="umcsdk_cmcc_wap">如果发送短信验证，此短信免费</string>
    <string name="umcsdk_cmcc_wifi">自动发送短信验证，此短信免费</string>
    <string name="umcsdk_get">获得</string>
    <string name="umcsdk_get_sms_code">获取验证码</string>
    <string name="umcsdk_getphonenumber_timeout">获取本机号码超时！</string>
    <string name="umcsdk_getsmscode_failure">获取短信验证码失败</string>
    <string name="umcsdk_hint_passwd">请输入验证码</string>
    <string name="umcsdk_hint_username">请输入手机号码</string>
    <string name="umcsdk_local_mobile">(本机号码)</string>
    <string name="umcsdk_login">登录</string>
    <string name="umcsdk_login_account_info_expire">帐号信息已过期，请使用短信验证码登录</string>
    <string name="umcsdk_login_failure">获取本机号码失败，请使用短信验证码登录</string>
    <string name="umcsdk_login_ing">登录中</string>
    <string name="umcsdk_login_limit">您登录过于频繁，请使用短信验证码登录</string>
    <string name="umcsdk_login_other_number">使用其它号码登录</string>
    <string name="umcsdk_login_owner_number">本机号码一键登录</string>
    <string name="umcsdk_login_success">登录成功</string>
    <string name="umcsdk_network_error">网络连接异常</string>
    <string name="umcsdk_oauth_version_name">v1.4.1</string>
    <string name="umcsdk_openapi_error">开放平台错误</string>
    <string name="umcsdk_other_wap">支持联通、电信用户，可能发送免费验证短信</string>
    <string name="umcsdk_other_wifi">支持联通、电信用户，免费发送验证短信</string>
    <string name="umcsdk_permission">拒绝授权将无法继续当前操作,是否重新提交授权？</string>
    <string name="umcsdk_permission_no">否</string>
    <string name="umcsdk_permission_ok">是</string>
    <string name="umcsdk_permission_tips">提示</string>
    <string name="umcsdk_phonenumber_failure">请输入正确的手机号码！</string>
    <string name="umcsdk_pref_about">关于</string>
    <string name="umcsdk_pref_item1">账户安全保护</string>
    <string name="umcsdk_pref_item2">隐私权</string>
    <string name="umcsdk_pref_value1">您的中国移动互联网账户已受安全账户机制保护。</string>
    <string name="umcsdk_pref_value2">中国移动互联网账户不会同步您的隐私信息</string>
    <string name="umcsdk_sms_login">短信验证码登录</string>
    <string name="umcsdk_smscode_error">请输入正确的短信验证码</string>
    <string name="umcsdk_smscode_wait_time">秒后重新获取</string>
    <string name="umcsdk_smslogin_failure">短信验证码登录失败</string>
    <string name="umcsdk_sure">登录代表你已同意《中国移动认证服务条款》</string>
    <string name="umcsdk_switch_account">切换账号</string>
    <string name="umcsdk_verify_identity">正在校验您的身份,请稍候...</string>
    <string name="umcsdk_version_name">和</string>
    <string name="yd_privacy_agree">请同意服务条款</string>
    <string name="mks_teghin_volume">请选择代金卷</string>
    <string name="useragreement_notice">感谢您使用本游戏，您使用本游戏应当仔细阅读并同意《用户服务协议》及《用户隐私协议》的各条款，尤其是以加粗字体标示的内容。如您拒绝，将无法进入游戏。请点击“同意”开始接受我们的服务。\n为向您提供游戏服务，我们可能在您使用过程中申请获取相关信息或权限，您可选择同意或拒绝，如您拒绝则可能影响部分功能使用，您可以在“设置”中查看并管理您的权限。</string>
    <string name="mks_tv_user_agreement"><u>用户协议</u></string>
    <string name="mks_tv_privacy_agreement"><u>隐私协议</u></string>
    <string name="mks_tv_platform_coin">平台币:%s</string>
    <string name="mks_tv_platform_present_coin">赠送币:%s</string>
    <string name="mks_tv_royal_flush">皇家同花顺 × %s</string>
    <string name="mks_tv_straight_flush">同花顺 × %s</string>
    <string name="mks_tv_four">四条 × %s</string>
    <string name="mks_tv_full_house">葫芦 × %s</string>
    <string name="mks_tv_flush">同花 × %s</string>
    <string name="mks_tv_straight">顺子 × %s</string>
    <string name="mks_tv_three_kind">三条 × %s</string>
    <string name="mks_tv_two_pair">两对 × %s</string>
    <string name="mks_tv_one_pair">一对 × %s</string>
    <string name="mks_tv_high">高牌 × %s</string>
</resources>