<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/kl_poker_bg_top">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/kl_iv_poker_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="-2.5dp"
                    android:background="@mipmap/kl_poker_close" />
            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/kl_poker_rule">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:shrinkColumns="2">

                <TableRow>

                    <TextView
                        android:id="@+id/kl_tv_poker_royal_flush"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_royal_flush"
                        android:textColor="@color/klfont_red"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kl_tv_poker_straight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_straight"
                        android:textColor="@color/klfont_orange_98"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/kl_tv_poker_straight_flush"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_straight_flush"
                        android:textColor="@color/color_ffad42"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kl_tv_poker_three_kind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_three_kind"
                        android:textColor="@color/klfont_orange_98"
                        android:textSize="12sp" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/kl_tv_poker_four"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_four"
                        android:textColor="@color/color_ffad42"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kl_tv_poker_two_pair"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_two_pair"
                        android:textColor="@color/color_ffad42"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/kl_tv_poker_full_house"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_full_house"
                        android:textColor="@color/color_ffad42"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kl_tv_poker_one_pair"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_one_pair"
                        android:textColor="@color/klfont_orange_98"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/kl_tv_poker_flush"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_flush"
                        android:textColor="@color/color_ffad42"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kl_tv_poker_high"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mks_tv_high"
                        android:textColor="@color/klfont_orange_98"
                        android:textSize="12sp" />
                </TableRow>


            </TableLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/kl_poker_mid">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="8dp">

                    <com.ddtsdk.ui.view.LuckPokerView
                        android:id="@+id/kl_lpv_poker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/kl_poker_shadow" />
            </FrameLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/kl_poker_bet">

            <ImageButton
                android:id="@+id/kl_btn_poker_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/kl_poker_switch" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/kl_btn_poker_switch"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/kl_tv_poker_platform_coin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mks_tv_platform_coin"
                    android:textColor="@color/color_ee483d"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/kl_tv_poker_present_coin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/kl_poker_coin_shape_bg"
                    android:gravity="center"
                    android:text="@string/mks_tv_platform_present_coin"
                    android:textColor="@color/color_ee483d"
                    android:textSize="10sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|left">

                    <ImageView
                        android:id="@+id/kl_iv_poker_reduce"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="5dp"
                        android:background="@mipmap/kl_poker_reduce" />


                    <TextView
                        android:id="@+id/kl_tv_poker_jackpot_coin"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:background="@drawable/kl_poker_bottom_pour_shape_bg"
                        android:gravity="center"
                        android:maxLength="5"
                        android:maxLines="1"
                        android:text="0"
                        android:textColor="@color/color_ee483d"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/kl_iv_poker_add"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="5dp"
                        android:background="@mipmap/kl_poker_add" />

                    <ImageButton
                        android:id="@+id/kl_ib_poker_spin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:background="@mipmap/kl_poker_bet_on" />

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>
    </LinearLayout>


</LinearLayout>